Fix/missing sound categories (#2933)